--- a/.env
+++ b/.env
@@ -1,2 +1,9 @@
 MONGODB_URI=mongodb+srv://root:root@project.eneolfi.mongodb.net/cell-app?retryWrites=true&w=majority&appName=Project
 JWT_SECRET=SECRETWORD
+
+FRONT_URL=http://localhost:5173
+
+EMAIL_USER=e56054f680e418
+EMAIL_PASS=********fad2
+EMAIL_PORT=2525
+EMAIL_HOST=sandbox.smtp.mailtrap.io
